<resources>
    <string name="app_name">E-ArsivPortal</string>

    <string name="home_create_new_invoice">Yeni Fatura Oluştur</string>
    <string name="home_outgoing_invoices">Giden Faturalar</string>
    <string name="home_incoming_invoices">Gelen Faturalar</string>
    <string name="home_products">Ürünler</string>
    <string name="home_customers">Müşteriler</string>
    <string name="home_cancellation_appeal_requests">İptal/İtiraz Talepleri</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Çıkış Yap</string>

</resources>