<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.HomeActivity">




    <androidx.cardview.widget.CardView
        android:id="@+id/homePageCreateNewInvoiceCardView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="14dp"
        app:cardBackgroundColor="@color/home_card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/homePageOutgoingInvoiceCardView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/homePageCreateNewInvoiceImg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintBottom_toTopOf="@+id/homePageCreateNewInvoiceText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                android:src="@drawable/create_new_invoice"/>

            <TextView
                android:id="@+id/homePageCreateNewInvoiceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="20dp"
                android:text="@string/home_create_new_invoice"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homePageCreateNewInvoiceImg" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/homePageCustomersCardView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/home_card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homePageProductsCardView"
        app:layout_constraintTop_toTopOf="@+id/homePageProductsCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/homePageCustomersImg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintBottom_toTopOf="@+id/homePageCustomersText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                android:src="@drawable/customers" />

            <TextView
                android:id="@+id/homePageCustomersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="20dp"
                android:text="@string/home_customers"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homePageCustomersImg" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/homePageProductsCardView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        app:cardBackgroundColor="@color/home_card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/homePageCustomersCardView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePageCancellationAppealRequestsCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/homePageProductsImg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintBottom_toTopOf="@+id/homePageProductsText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                android:src="@drawable/products" />

            <TextView
                android:id="@+id/homePageProductsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="20dp"
                android:text="@string/home_products"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homePageProductsImg" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/homePageIncomingCardView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/home_card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homePageCancellationAppealRequestsCardView"
        app:layout_constraintTop_toTopOf="@+id/homePageCancellationAppealRequestsCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/homePageIncomingImg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintBottom_toTopOf="@+id/homePageIncomingText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                android:src="@drawable/incoming_invoices" />

            <TextView
                android:id="@+id/homePageIncomingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="20dp"
                android:text="@string/home_incoming_invoices"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homePageIncomingImg" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/homePageOutgoingInvoiceCardView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/home_card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homePageCreateNewInvoiceCardView"
        app:layout_constraintTop_toTopOf="@+id/homePageCreateNewInvoiceCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/homePageOutgoingInvoiceImg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintBottom_toTopOf="@+id/homePageOutgoingInvoiceText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                android:src="@drawable/outgoing_invoices" />

            <TextView
                android:id="@+id/homePageOutgoingInvoiceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="20dp"
                android:text="@string/home_outgoing_invoices"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homePageOutgoingInvoiceImg" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/homePageCancellationAppealRequestsCardView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        app:cardBackgroundColor="@color/home_card_background"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/homePageIncomingCardView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePageCreateNewInvoiceCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/homePageCancellationAppealRequestsImg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintBottom_toTopOf="@+id/homePageCancellationAppealRequestsText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                android:src="@drawable/cancellation_appeal_requests" />

            <TextView
                android:id="@+id/homePageCancellationAppealRequestsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="20dp"
                android:text="@string/home_cancellation_appeal_requests"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homePageCancellationAppealRequestsImg" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>